--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
+@use 'variables';
+
 nav {
   ul {
     margin: 0;
-    padding: 0;
+    padding: variables.$padding;
     list-style: none;
   }
 
@@ -11,6 +13,6 @@ nav {
     display: block;
     padding: 6px 12px;
     text-decoration: none;
-    color: red;
+    color: variables.$primary;
   }
 }
