--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,8 +17,8 @@ nav {
   }
 }
 
-@mixin card-base {
-    background: #fff;
+@mixin card-base($bg: #fff) {
+    background: $bg;
     border-radius: variables.$radius;
     box-shadow: 0 2px 12px rgba(0,0,0,0.08);
     padding: 1.5rem 1.25rem;
@@ -33,6 +33,10 @@ nav {
 
 .card {
     @include card-base;
+
+    &--info {
+        @include card-base(#009dff);
+    }
 
     &__title {
         font-size: 1.5rem;
