--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,7 +17,7 @@ nav {
   }
 }
 
-@mixin card-base {
+%card-base {
     background: #fff;
     border-radius: variables.$radius;
     box-shadow: 0 2px 12px rgba(0,0,0,0.08);
@@ -35,7 +35,7 @@ nav {
 // .btn .btn-danger
 
 .card {
-    @include card-base;
+    @extend %card-base;
 
     &-info {
         background: lightblue;
