refactor(cursor): 更新游標樣式以使用 !important

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -50,14 +50,14 @@ $items: (
 }
 
 $cursors: (
-    help: help,
+    pointer: pointer,
     wait: wait,
     cross: crosshair,
 );
 
 @each $key, $val in $cursors {
     .cursor-#{$key} {
-        cursor: $val;
+        cursor: $val !important;
     }
 }
 
