--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @use 'variables';
 @use 'functions';
 @use 'abstracts';
+@use 'tokens' as *;
 
 @mixin tomasBanner($file: root) {
   /*!
@@ -10,6 +11,18 @@
 }
 
 @include tomasBanner();
+
+@each $key, $value in $spacings {
+    .m-#{$key} {
+        margin: $value;
+    }
+}
+
+@each $key, $value in $font-sizes {
+    .fs-#{$key} {
+        font-size: $value;
+    }
+}
 
 $cols: 1 2 3 4 5 6 7 8 9 10 11 12;
 
