--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,16 @@
     }
 }
 
+// 響應式 spacing
+@each $bp, $bp-width in $breakpoints {
+  @media (min-width: $bp-width) {
+    @each $m, $m-value in $spacings {
+      .m-#{$bp}-#{$m} { margin: $m-value; }
+      .p-#{$bp}-#{$m} { padding: $m-value; }
+    }
+  }
+}
+
 $cols: 1 2 3 4 5 6 7 8 9 10 11 12;
 
 @each $col in $cols {
