--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,14 @@
   }
 }
 
+@each $bp, $bp-width in $breakpoints {
+  @media (min-width: $bp-width) {
+    @each $fs, $fs-value in $font-sizes {
+      .fs-#{$bp}-#{$fs} { margin: $fs-value; }
+    }
+  }
+}
+
 $cols: 1 2 3 4 5 6 7 8 9 10 11 12;
 
 @each $col in $cols {
