--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -3,6 +3,6 @@
 body {
   font-family: $font-family;
   margin: 0;
-  background: $lightwhite;
-  color: $black;
+  background: var(--bg);
+  color: var(--text);
 }
