--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -17,7 +17,7 @@ nav {
   float: right;
 }
 nav a {
-  color: $black;
+  color: var(--text);
   text-decoration: none;
   margin-left: 24px;
   font-size: 1rem;
