--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,6 @@
 @use 'abstracts/variables';
+@use 'abstracts/themes';
 @use 'base/reset';
 @use 'layout/container';
 @use 'layout/header';
+@use 'components/banner';
