feat(theme): 更新深色主題顏色與樣式

--- a/src/scss/abstracts/_themes.scss
+++ b/src/scss/abstracts/_themes.scss
@@ -11,10 +11,10 @@ $themes: (
     secondary: #6ec1e4,
   ),
   dark: (
-    bg: #121212,
-    text: #e6e6e6,
-    primary: #90caf9,
-    secondary: #6ec1e4,
+    bg: #10241b,
+    text: #e6ffe6,
+    primary: #1abc9c,
+    secondary: #145a32,
   )
 );
 
