--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,4 @@
-@use 'abstracts/variables';
-@use 'abstracts/themes';
-@use 'base/reset';
-@use 'layout/container';
-@use 'layout/header';
-@use 'components/banner';
+@use 'abstracts';
+@use 'base';
+@use 'layout';
+@use 'components';
