fix: 變數使用錯誤

--- a/src/scss/pages/_cart.scss
+++ b/src/scss/pages/_cart.scss
@@ -16,7 +16,7 @@
   text-align: left;
 }
 .cart-table th {
-  background: $lightwhite;
+  background: white;
 }
 .cart-total {
   text-align: right;
